correctie Link rel  - href style/css

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -9,9 +9,8 @@ div.container{
 }
 footer {
     height: 100px;
-    width: 100px;
     bottom: 0px;
-    
+    background-color: aquamarine;
 }
 
 footer p{
