--- a/site/css/style.css
+++ b/site/css/style.css
@@ -3,6 +3,31 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+nav{
+    display: flex;
+    justify-content: right;
+    font-size: 19px;
+    gap: 60px;
+}
+nav ul li{
+   
+    list-style-type: none;
+    display: inline-block;
+    padding: 5px 5px 5px 5px;
+}
+
+nav ul li a {   
+    
+    text-decoration: none;   
+    color: #3B282A
+}
+
+nav ul li a:hover {
+    color: grey;
+    transition: .3s;
+}
+
 div.container{
     margin: 0 auto;
     width: 960px;
