--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6,15 +6,17 @@
 
 nav{
     display: flex;
-    justify-content: right;
     font-size: 19px;
-    gap: 60px;
 }
-nav ul li{
-   
+
+nav ul{
+    text-align: center;
+}
+
+nav ul li{  
     list-style-type: none;
     display: inline-block;
-    padding: 5px 5px 5px 5px;
+    padding: 10px;
 }
 
 nav ul li a {   
