--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+header{
+    height: 100px;
+    background-color: yellow;  
+}
+
+
 nav{
     display: flex;
     font-size: 19px;
