--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -8,3 +8,13 @@ div.container{
     width: 960px;
     margin: 0 auto;
 }
+
+div.recepten-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.recepten{
+    width: 150px;
+    height: 150px;
+}
