--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -1,20 +1,90 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
-div.container{
-    width: 960px;
+div.container {
+    width: 1200px;
     margin: 0 auto;
 }
 
-div.recepten-container{
+div.flex-container {
     display: flex;
     flex-wrap: wrap;
 }
 
-div.recepten{
-    width: 150px;
-    height: 150px;
+div.blok {
+    position: relative;
+    width: 50%;
+    max-width: 30px;
 }
+
+div.blok h1 {
+    font-size: 20px;
+}
+
+div.tekst-overlay {
+    position: absolute;
+    top: 0;  
+    background-color: grey;
+    color: #f1f1f1;
+    width: 400px;
+    height: 200px;
+    transition: .5s ease;
+    opacity: 0;
+    padding: 20px;
+    
+}
+div.blok:hover .tekst-overlay {
+    opacity: 1;
+}
+
+div.overlay-bar{
+    position: absolute;
+    bottom: 0px;
+    width: 300px;
+    height: 70px;
+    transition: .5s ease;
+    opacity: 0;
+}
+
+div.blok:hover .overlay-bar {
+    opacity: 1;
+}
+
+div.overlay-bar-container {
+    position: relative;
+    display: flex;
+    background-color: white;
+    width: 390px;
+    height: 50px;
+    margin: 0 auto;
+    gap: 5px;
+}
+
+div.overlay-bar-items{
+     display: flex;
+     align-items: center;
+}
+
+div.overlay-bar-items p{
+     padding-left: 5px;
+}
+
+div.overlay-bar-items img{
+    width: 20px;
+    height: 20px;
+    
+}
+
+img {
+    width: 400px;
+    height: 200px;
+    display: block;
+}
+
+
+
+
+
