--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -14,17 +14,19 @@ div.flex-container {
     flex-wrap: wrap;
 }
 
-div.blok {
+div.image-blok {
     position: relative;
     width: 50%;
     max-width: 30px;
 }
 
-div.blok h1 {
-    font-size: 20px;
+div.receptnaam{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 300px;
 }
 
-div.tekst-overlay {
+div.overlay {
     position: absolute;
     top: 0;  
     background-color: grey;
@@ -36,20 +38,21 @@ div.tekst-overlay {
     padding: 20px;
     
 }
-div.blok:hover .tekst-overlay {
+div.image-blok:hover .overlay {
     opacity: 1;
 }
 
 div.overlay-bar{
     position: absolute;
-    bottom: 0px;
+    bottom: -15px;
+    left: 5px;
     width: 300px;
     height: 70px;
     transition: .5s ease;
     opacity: 0;
 }
 
-div.blok:hover .overlay-bar {
+div.image-blok:hover .overlay-bar {
     opacity: 1;
 }
 
@@ -70,6 +73,7 @@ div.overlay-bar-items{
 
 div.overlay-bar-items p{
      padding-left: 5px;
+     color: black;
 }
 
 div.overlay-bar-items img{
@@ -84,7 +88,9 @@ img {
     display: block;
 }
 
-
+h2{
+    width: 300px;
+}
 
 
 
