--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -5,19 +5,19 @@
 }
 
 div.container {
-    width: 1200px;
+    width: 1100px;
     margin: 0 auto;
 }
 
 div.flex-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px
 }
 
 div.image-blok {
+    
     position: relative;
-    width: 50%;
-    max-width: 30px;
 }
 
 div.receptnaam{
@@ -31,7 +31,7 @@ div.overlay {
     top: 0;  
     background-color: grey;
     color: #f1f1f1;
-    width: 400px;
+    width: 360px;
     height: 200px;
     transition: .5s ease;
     opacity: 0;
@@ -60,7 +60,7 @@ div.overlay-bar-container {
     position: relative;
     display: flex;
     background-color: white;
-    width: 390px;
+    width: 350px;
     height: 50px;
     margin: 0 auto;
     gap: 5px;
@@ -69,6 +69,7 @@ div.overlay-bar-container {
 div.overlay-bar-items{
      display: flex;
      align-items: center;
+     padding-left: 2px;
 }
 
 div.overlay-bar-items p{
@@ -83,7 +84,7 @@ div.overlay-bar-items img{
 }
 
 img {
-    width: 400px;
+    width: 360px;
     height: 200px;
     display: block;
 }
