--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -5,14 +5,14 @@
 }
 
 div.container {
-    width: 1100px;
+    width: 960px;
     margin: 0 auto;
 }
 
 div.flex-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px
+    gap: 20px
 }
 
 div.image-blok {
@@ -31,7 +31,7 @@ div.overlay {
     top: 0;  
     background-color: grey;
     color: #f1f1f1;
-    width: 360px;
+    width: 300px;
     height: 200px;
     transition: .5s ease;
     opacity: 0;
@@ -45,7 +45,7 @@ div.image-blok:hover .overlay {
 div.overlay-bar{
     position: absolute;
     bottom: -15px;
-    left: 5px;
+    right:  0.5px;
     width: 300px;
     height: 70px;
     transition: .5s ease;
@@ -60,7 +60,7 @@ div.overlay-bar-container {
     position: relative;
     display: flex;
     background-color: white;
-    width: 350px;
+    width: 280px;
     height: 50px;
     margin: 0 auto;
     gap: 5px;
@@ -75,6 +75,7 @@ div.overlay-bar-items{
 div.overlay-bar-items p{
      padding-left: 5px;
      color: black;
+     font-size: 10px;
 }
 
 div.overlay-bar-items img{
@@ -84,14 +85,13 @@ div.overlay-bar-items img{
 }
 
 img {
-    width: 360px;
+    width: 300px;
     height: 200px;
     display: block;
 }
 
 h2{
-    width: 300px;
+    font-size: 18px;
+    text-align: center;
 }
-
-
 
