--- a/site/css/style1.css
+++ b/site/css/style1.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
 }
 
-header{
-    background-image: url('background.jpg');
-    height: 100px;
+header img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
     
 }
 
