--- a/site/css/style1.css
+++ b/site/css/style1.css
@@ -1,35 +1,44 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-header img{
+.top-header {
+    /* background-image: url(); */
+
+    background: url(../images/header_background.png) no-repeat center center fixed;
+    width: 100%;
+    height: 200px;
+    background-position: center ;
+}
+
+header img {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    
+    overflow: hidden;
 }
 
-nav{
+nav {
     display: flex;
     font-size: 19px;
     background-color: #1520A6;
 }
 
-nav ul{
+nav ul {
     text-align: center;
 }
 
-nav ul li{  
+nav ul li {
     list-style-type: none;
     display: inline-block;
     padding: 10px;
 }
 
-nav ul li a {   
-    
-    text-decoration: none;   
+nav ul li a {
+
+    text-decoration: none;
     color: black;
 }
 
@@ -44,13 +53,13 @@ footer {
     background-color: #1520A6;
 }
 
-footer p{
+footer p {
     line-height: 100px;
     text-align: center;
     font-size: 15px;
 }
 
-div.container{
+div.container {
     margin: 0 auto;
     width: 960px;
 }
