--- a/site/css/style1.css
+++ b/site/css/style1.css
@@ -6,11 +6,14 @@
 
 .top-header {
     /* background-image: url(); */
-    background: url(../images/header_background.png) no-repeat center center fixed;
+    height: 300px;
     width: 100%;
-    height: 200px;
-    background-position: center ;
+    background-image: url(../images/header_background.png);  
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;   
 }
+
 
 nav{
     display: flex;
