--- a/site/css/style4.css
+++ b/site/css/style4.css
@@ -9,16 +9,107 @@ main{
     padding-bottom: 20px;
 }
 
-body{
-    margin: 0;
-}
-
 div.container {
     width: 960px;
     margin: 0 auto;
 }
 
+/* recept.php styling  */
+
 div.flex-container {
+    display: flex;
+}
+
+div.recepten h1 {
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+div.recepten p {
+    padding-bottom: 10px;
+}
+
+div.recepten hr {
+    margin-bottom: 20px; 
+}
+
+div.recept-box {
+    display: flex;
+    gap: 140px;
+}
+
+div.recept-algemeen p {
+    width: 150px;
+}
+
+div.recept-algemeen img.recept-foto{
+    width: 200px;
+    height: 200px;
+    border-image: round;
+    padding-bottom: 10px;
+}
+
+div.recept-info h2 {
+    padding-bottom: 20px;
+}
+
+div.timers {
+    display: flex;
+    flex-direction: column;
+}
+
+div.timer-tijd {
+    display: flex;
+    flex-direction: row;
+}
+
+div.timer-tijd h2{
+    font-size: 15px;
+    padding-top: 10px;
+}
+
+div.timer-tijd img.timer{
+    width: 35px;
+    height: 35px;
+}
+
+div.bereidingstijd p.kooktijd{
+    padding-left: 40px;
+}
+
+div.ingrediënten h2{
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+div.blok{
+    width: 200px;
+    height: 75px;
+    background-color: green;
+    border-radius: 150px;
+    margin: 0 auto;
+}
+
+div.blok-inhoud{   
+    display: flex;
+    width: 100px;
+    height: 35px;
+    padding-top: 20px;
+    margin: 0 auto;
+}
+
+div.blok-inhoud p{
+    padding-top: 10px;
+}
+
+div.blok-inhoud img{
+    width: 35px;
+}    
+
+
+/*  recepten.php  styling */
+
+div.gerechten-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px
@@ -99,8 +190,7 @@ div.overlay-bar-items p{
 
 div.overlay-bar-items img{
     width: 20px;
-    height: 20px;
-    
+    height: 20px;  
 }
 
 
