--- a/site/css/style.css
+++ b/site/css/style.css
@@ -5,7 +5,6 @@
 }
 
 .top-header {
-    /* background-image: url(); */
     height: 300px;
     width: 100%;
     background-image: url(../images/header_background.png);  
@@ -14,7 +13,7 @@
     background-repeat: no-repeat;   
 }
 
-
+/*  Navigatie     */
 nav{
     display: flex;
     font-size: 19px;
