--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+
+/* header */
+
 .top-header {
     height: 300px;
     width: 100%;
@@ -13,7 +16,8 @@
     background-repeat: no-repeat;   
 }
 
-/*  Navigatie     */
+/*  navigatie     */
+
 nav{
     display: flex;
     font-size: 19px;
@@ -42,6 +46,7 @@ nav ul li a:hover {
 }
 
 /* footer */
+
 footer {
     height: 50px;
     bottom: 0px;
