--- a/site/css/style.css
+++ b/site/css/style.css
@@ -138,18 +138,16 @@ div.ingrediënten h2{
 }
 
 div.blok{
-    width: 200px;
+    width: 250px;
     height: 75px;
     background-color: green;
     border-radius: 150px;
     margin: 0 auto;
 }
 
-div.blok-inhoud{   
-    display: flex;
-    width: 100px;
-    height: 35px;
-    padding-top: 20px;
+div.blok-inhoud{    
+    width: 130px;
+    height: 35px; 
     margin: 0 auto;
 }
 
@@ -248,6 +246,9 @@ div.overlay-bar-items img{
     height: 20px;  
 }
 
+div.buttons{
+    padding-bottom: 20px;
+}
 
 
 
