div.top-content toegevoegd + styling (1)

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -71,6 +71,10 @@ div.container {
 
 /*    index.php             */
 
+div.top-content{
+   padding-bottom: 10px;
+}
+
 /* recept.php styling  */
 
 div.flex-container {
