--- a/site/css/style.css
+++ b/site/css/style.css
@@ -101,7 +101,7 @@ div.recepten-flexbox{
     gap: 20px;
 }
 
-div.recepten-items img{
+div.recepten-item img{
     width: 300px;
     height: 200px;
 }
