--- a/site/css/style.css
+++ b/site/css/style.css
@@ -106,6 +106,11 @@ div.recepten-item img{
     height: 200px;
 }
 
+div.recepten-item p{
+    text-align: center;
+    color: green;
+}
+
 /* recept.php styling  */
 
 div.flex-container {
