registratie.php toegevoegd

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -334,6 +334,8 @@ div.overlay-bar-items img{
     height: 20px;  
 }
 
+/* login.php */
+
 
 h1,h2,p{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
