--- a/site/css/style.css
+++ b/site/css/style.css
@@ -341,64 +341,47 @@ html, body {
 
 div.registratie-pagina{
     height: 100%;
-    background-color: #78a7ba;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: scroll;
 }
 
-.signup-form{
-    flex: 1;
-    max-width: 600px;
-    background-color: #EFF0F1;
-    border-radius: 10px;
-    border: 1px solid #999;
-    background-color: #EFF0F1;
-}
-
-.form-header {
+div.registratie-pagina h1{
     text-align: center;
-    padding:15px 0;
-    border-bottom:1px solid #cccccc;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
-.form-body {
-    background:white;
-    padding:5px 10px;
+form{
+    max-width: 400px;
+    background-color: grey;
 }
 
-div.row{
-  display: flex;
-  flex-direction: row;
+div.input-groep{
+    padding-left: 20px;
+    display: inline-block;
+    margin-bottom: 20px;
 }
 
-div.input-group{
-   flex: 1;
-   display: flex;
-   flex-direction: column;
-   margin: 10px 5px;
+label{
+    display: block;
 }
 
-label {
-    color:#1BBA93;
-    font-size: 17px;
-    font-weight: 500;
+input[type=text], input[type=email], input[type=password]{
+    height: 30px;
+
 }
 
-input[type="text"] {
-  font-size: 18px;
-  height: 34px;
-  padding-left: 10px;
-  padding-right: 10px;
-  color: #666;
-  border: 1px solid #d6d6d6;
-  border-radius: 4px;
-  background: white;
-  outline: none;
+input[type=email]{
+    width: 357px;
 }
 
+button{
+    width: 357px;
+    height: 30px;
+    color: blue;
 
+}
 
 h1,h2,p{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
