--- a/site/css/style.css
+++ b/site/css/style.css
@@ -11,35 +11,35 @@
 .top-header {
     height: 300px;
     width: 100%;
-    background-image: url(../images/header_background.png);  
+    background-image: url(../images/header_background.png);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
 }
 
 /*  navigatie     */
 
-nav{
+nav {
     display: flex;
     height: 70px;
     font-size: 22px;
     background-color: #1520A6;
-    
+
 }
 
-nav ul{
+nav ul {
     text-align: center;
 }
 
-nav ul li{  
+nav ul li {
     list-style-type: none;
     display: inline-block;
     padding: 10px;
 }
 
-nav ul li a {   
-    
-    text-decoration: none;   
+nav ul li a {
+
+    text-decoration: none;
     color: black;
 }
 
@@ -56,46 +56,45 @@ footer {
     background-color: #1520A6;
 }
 
-footer p{
+footer p {
     line-height: 100px;
     text-align: center;
     font-size: 15px;
 }
 
-normale-main{ /* Class voor elke pagina behalve index.php   */
-   padding-top: 20px;
-   padding-bottom: 20px;
-}
-
-index-main{  /* class voor index.php   */
+normale-main {
+    /* Class voor elke pagina behalve index.php   */
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
-div.container {
-    width: 960px;
-    margin: 0 auto;
+index-main {
+    /* class voor index.php   */
+    padding-bottom: 20px;
 }
+
+
 
 /*    index.php             */
 
-div.top-content img{
-   width: 100%;
-   height: 600px;
-   object-fit: cover;
-   display: block;
+div.top-content img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    display: block;
 }
 
-div.top-content a{
+div.top-content a {
     text-decoration: none;
 }
 
-div.top-content-naam{
+div.top-content-naam {
     width: 100%;
     background-color: green;
-    
+
 }
 
-div.top-content-naam h1{
+div.top-content-naam h1 {
     padding-top: 20px;
     padding-bottom: 30px;
     text-align: center;
@@ -103,41 +102,43 @@ div.top-content-naam h1{
 }
 
 
-div.recept-titel{
+div.recept-titel {
     padding-top: 40px;
     padding-bottom: 20px;
 }
 
-div.recept-titel h2{
+div.recept-titel h2 {
     text-align: center;
     padding-bottom: 10px;
 }
 
-div.recepten-flexbox{
+.recepten-flexbox {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    max-width: 1024px;
+    margin: 0 auto;
+    
 }
 
-div.recepten-item{
-    padding-bottom: 30px;
-}
 
-div.recepten-item img{
-    width: 300px;
-    height: 200px;
-}
-
-div.recepten-item p{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    color: green;
+.recepten-item{   
+    flex-grow: 1px;
+    flex-shrink: 1px;
+    flex-basis: calc(25% -10px);
+    margin: 5px;
+    
 }
 
 
 
-div.recepten-item a{
+img{
+    width: 100%;
+}
+
+
+
+
+div.recepten-item a {
     text-decoration: none;
 }
 
@@ -148,7 +149,7 @@ div.flex-container {
 }
 
 div.recepten {
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
 }
 
 div.recepten h1 {
@@ -168,7 +169,7 @@ div.recept-box {
 }
 
 
-div.recept-algemeen img.recept-foto{
+img.recept-foto {
     width: 400px;
     height: 250px;
     border-image: round;
@@ -189,32 +190,32 @@ div.timer-tijd {
     flex-direction: row;
 }
 
-div.timer-tijd h2{
+div.timer-tijd h2 {
     font-size: 15px;
     padding-top: 10px;
 }
 
-div.timer-tijd img.timer{
+div.timer-tijd img.timer {
     width: 35px;
     height: 35px;
 }
 
-div.bereidingstijd{
+div.bereidingstijd {
     display: inline-flex;
     gap: 3px;
     padding-left: 35px;
 }
 
-div.ingrediënten p{
+div.ingrediënten p {
     width: 150px;
 }
 
-div.ingrediënten h2{
+div.ingrediënten h2 {
     font-size: 20px;
     padding-bottom: 10px;
 }
 
-div.blok{   
+div.blok {
     width: 220px;
     height: 75px;
     background-color: green;
@@ -222,56 +223,57 @@ div.blok{
     margin: 0 auto;
 }
 
-div.blok-inhoud{
+div.blok-inhoud {
     display: inline-flex;
     padding-top: 18px;
-    padding-left: 50px;   
+    padding-left: 50px;
 }
 
-div.blok-inhoud p{
+div.blok-inhoud p {
     padding-top: 10px;
 
 }
 
-div.blok-inhoud img{
+div.blok-inhoud img {
     width: 35px;
-}    
+}
 
 
 /*  recepten.php  styling */
 
-div.categorie-tekst{
+div.categorie-tekst {
     width: 930px;
     padding-bottom: -5px;
 }
 
-div.categorie-tekst h1{
+div.categorie-tekst h1 {
     text-align: center;
     padding-bottom: 10px;
 }
 
 div.gerechten-container {
+    
     padding-top: 20px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px
 }
 
-div.gerechten {    
-    position: relative;
-}
 
-div.gerechten img{
-    width: 300px;
+
+div.gerechten img {
+    
     height: 200px;
 }
 
-div.gerechten a{
+
+
+div.gerechten a {
     text-decoration: none;
     color: green;
 }
 
-div.gerechten-naam h2{
+div.gerechten-naam h2 {
     padding-top: 10px;
     width: 300px;
     font-size: 18px;
@@ -279,25 +281,27 @@ div.gerechten-naam h2{
 }
 
 div.overlay {
-    position: absolute; 
-    top: 0;  
+    position: absolute;
+    top: 0;
     background-color: grey;
     color: #f1f1f1;
     width: 300px;
     height: 200px;
-    transition: .5s ease; 
-    opacity: 0; /* transparantheid  */
+    transition: .5s ease;
+    opacity: 0;
+    /* transparantheid  */
     padding: 20px;
-    
+
 }
-div.gerechten:hover .overlay { 
+
+div.gerechten:hover .overlay {
     opacity: 1;
 }
 
-div.overlay-bar{
+div.overlay-bar {
     position: absolute;
     bottom: -15px;
-    right:  0.5px;
+    right: 0.5px;
     width: 300px;
     height: 70px;
     transition: .5s ease;
@@ -318,131 +322,132 @@ div.overlay-bar-container {
     gap: 5px;
 }
 
-div.overlay-bar-items{
-     display: flex;
-     align-items: center;
-     padding-left: 2px;
+div.overlay-bar-items {
+    display: flex;
+    align-items: center;
+    padding-left: 2px;
 }
 
-div.overlay-bar-items p{
-     padding-left: 5px;
-     color: black;
-     font-size: 10px;
+div.overlay-bar-items p {
+    padding-left: 5px;
+    color: black;
+    font-size: 10px;
 }
 
-div.overlay-bar-items img{
+div.overlay-bar-items img {
     width: 20px;
-    height: 20px;  
+    height: 20px;
 }
 
 /* registratie.php */
-div.registratie-pagina{   
+div.registratie-pagina {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 30px;
-     margin-bottom: 20px;
+    margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid transparent;
     border-radius: 4px;
-    
+
 }
 
-div.registratie-pagina h1{
+div.registratie-pagina h1 {
     padding-left: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
 }
 
-div.registratie-pagina p{
+div.registratie-pagina p {
     text-align: center;
 }
 
-div.form-panel{
+div.form-panel {
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid transparent;
     border-radius: 4px;
 }
 
-div.panel-body{
+div.panel-body {
     padding: 15px;
 }
 
-div.stripe-outer{
+div.stripe-outer {
     border: 1px solid #eee;
     padding: 20px;
     margin: 20px 0px;
 }
 
-div.form-outer{
+div.form-outer {
     padding-bottom: 20px;
 }
 
-div.form-outer h1{
+div.form-outer h1 {
     text-align: left;
 }
 
-div.input-groep{
+div.input-groep {
     padding-left: 20px;
     display: inline-block;
     margin-bottom: 20px;
 }
 
-div.input-groep p{
+div.input-groep p {
     font-size: 12px;
     color: gray;
     padding-left: 120px;
 }
 
-div.input-groep a{
+div.input-groep a {
     margin-left: 120px;
     font-size: 14px;
 }
 
-input.input-email, .input-tel{
+input.input-email,
+.input-tel {
     width: 357px;
 }
 
-input.input_wachtwoord_login, .input_email_login{
+input.input_wachtwoord_login,
+.input_email_login {
     width: 357px;
 }
 
-label.input-label{
+label.input-label {
     display: block;
     padding-bottom: 5px;
 }
 
-button.input_button{
+button.input_button {
     width: 357px;
     height: 30px;
     color: blue;
 }
 
 /* algemene forms styling */
-form{
-    max-width: 400px; 
+form {
+    max-width: 400px;
 }
 
-input{
+input {
     height: 30px;
 }
 
-h1,h2,p{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h1,
+h2,
+p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* zoek styling  */
 
-form.zoeken{
+form.zoeken {
     padding-top: 20px;
 }
 
-button.button-zoeken{
-   
+button.button-zoeken {
+
     height: 25px;
 }
-
-
-
